# CyBerBaZi

./: .gitignore  DEPLOYMENT.md  DEVELOPMENT_PLAN.md  README.md  deploy.sh  docker-compose.yml  nginx.conf
apps/backend/: Dockerfile  pyproject.toml
apps/backend/src/bazi_api/: config.py  main.py
apps/backend/src/bazi_api/routers/: analysis.py  paipan.py
apps/backend/src/bazi_api/schemas/: requests.py  responses.py
apps/backend/tests/test_routers/: test_api.py
apps/web/: package-lock.json  package.json  tailwind.config.js
apps/web/src/: App.tsx  index.css
apps/web/src/api/: client.ts
apps/web/src/pages/: ChartPage.tsx  HomePage.tsx  ReportPage.tsx
apps/web/src/types/: bazi.ts
tools/: generate_solar_terms.py
