[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bazi-api"
version = "0.1.0"
description = "REST API for the BaZi fortune-telling engine"
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]",
    "bazi-engine",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "httpx",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
